Add task deletion

--- a/src/index.html
+++ b/src/index.html
@@ -13,9 +13,10 @@
             <input type="submit"/>
         </form>
         <h2>Tasks</h2>
-        <ul id="taskTable">
+        <ul id="taskList">
 
         </ul>
+        <div></div>
     </body>
 
     <script src="index.js"></script>
