Add time and downloading tasks.

--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,10 @@
 
     <body>
         <h1>Taskr</h1>
+        <button id="uploadButton">Upload Tasks</button>
+        <div style="padding:0.5%""></div>
+        <button id="downloadButton">Download Tasks</button>
+        <div style="padding:0.5%""></div>
         <form id="taskInputForm">
             <label>Add Task</label>
             <input name="addTask" id="addTask"/>
