Add task upload

--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,7 @@
 
     <body>
         <h1>Taskr</h1>
+        <input id="upload" type="file"></input>
         <button id="uploadButton">Upload Tasks</button>
         <div style="padding:0.5%""></div>
         <button id="downloadButton">Download Tasks</button>
