Upload experience improvement

--- a/src/index.html
+++ b/src/index.html
@@ -7,11 +7,10 @@
 
     <body>
         <h1>Taskr</h1>
-        <input id="upload" type="file"></input>
-        <button id="uploadButton">Upload Tasks</button>
-        <div style="padding:0.5%""></div>
+        <input style="display:none" id="upload" type="file"></input>
+        <button id="uploadButton">Upload Tasks</button >
+        <div></div>
         <button id="downloadButton">Download Tasks</button>
-        <div style="padding:0.5%""></div>
         <form id="taskInputForm">
             <label>Add Task</label>
             <input name="addTask" id="addTask"/>
